# ChronoDownloader

./: .gitignore  CONFIG_GUIDE.md  MIGRATION.md  README.md  WORKFLOW_GUIDE.md  api_keys.json  config.example.json  config.json  config_multi.json  config_small.json  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_works.csv
api/: __init__.py  annas_archive_api.py  bne_api.py  bnf_gallica_api.py  british_library_api.py  ddb_api.py  direct_iiif_api.py  download_helpers.py  dpla_api.py  e_rara_api.py  europeana_api.py  google_books_api.py  hathitrust_api.py  identifier_resolver.py  iiif.py  internet_archive_api.py  loc_api.py  matching.py  mdz_api.py  model.py  polona_api.py  providers.py  query_helpers.py  sbb_digital_api.py  slub_api.py  utils.py  wellcome_api.py
api/core/: __init__.py  atomic.py  budget.py  config.py  context.py  download.py  naming.py  network.py
api/iiif/: __init__.py  _direct.py  _parsing.py  _renderings.py  _strategies.py
api/providers/: __init__.py  _registry.py  annas_archive.py  bne.py  bnf_gallica.py  british_library.py  ddb.py  dpla.py  e_rara.py  europeana.py  google_books.py  hathitrust.py  internet_archive.py  loc.py  mdz.py  polona.py  sbb_digital.py  slub.py  wellcome.py
main/: __init__.py  background_scheduler.py  console_ui.py  deferred.py  deferred_queue.py  download_scheduler.py  downloader.py  execution.py  index_manager.py  interactive.py  mode_selector.py  pipeline.py  quota_manager.py  selection.py  state_manager.py  unified_csv.py  work_manager.py
main/cli/: __init__.py  __main__.py  dispatch.py  entry.py  exit_codes.py  overrides.py  parser.py
main/cli/commands/: __init__.py  batch.py  direct_iiif.py  identifier.py  providers.py  quota.py  search.py  verify.py
main/data/: __init__.py  index.py  work.py  works_csv.py
main/orchestration/: __init__.py  execution.py  pipeline.py  scheduler.py  selection.py
main/state/: __init__.py  background.py  deferred.py  quota.py  store.py
main/ui/: __init__.py  console.py  interactive.py  mode.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py  test_providers.py  test_selection.py
tests/staging/: config_staging.json  run_matrix.sh  staging_direct_iiif.csv  staging_search.csv
tests/unit/: __init__.py  test_background_scheduler.py  test_budget.py  test_cli_contract.py  test_cli_id.py  test_cli_iiif.py  test_cli_search.py  test_config.py  test_console_ui_extended.py  test_context.py  test_deferred_plumbing.py  test_deferred_queue.py  test_direct_iiif.py  test_download_atomic.py  test_download_helpers.py  test_download_scheduler.py  test_downloader.py  test_execution.py  test_execution_extended.py  test_identifier_resolver.py  test_iiif.py  test_iiif_completeness.py  test_index_manager.py  test_interactive.py  test_interactive_iiif.py  test_interface_surfaces.py  test_loc_url.py  test_matching.py  test_matching_semantics.py  test_mode_selector.py  test_model.py  test_model_extended.py  test_naming.py  test_network.py  test_network_extended.py  test_pipeline_extended.py  test_query_helpers.py  test_quota_manager.py  test_search_timeout.py  test_selection_extended.py  (+6 more)
verification/: config_parallel.json  config_verify.json  direct_iiif.csv  multi_provider.csv  parallel.csv  step12_readme.py
verification/baseline/: help.txt  providers.txt  pytest_output.txt  quota.txt  summary.txt
