[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "main"]

[project]
name = "chronodownloader"
version = "1.0.1"
description = "Discover and download digitized historical sources from 17 digital libraries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33",
    "urllib3>=2.6",
    "beautifulsoup4>=4.14",
    "pandas>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "mypy>=1.20",
    "pandas-stubs>=2.3,<3.0",
    "types-requests>=2.33",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use mocks)",
    "slow: Slow running tests",
    "network: Tests requiring network access (skip by default)",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
