[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "main"]

[project]
name = "chronodownloader"
version = "1.7.1"
description = "Discover and download digitized historical sources from 17 digital libraries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.34",
    "urllib3>=2.6",
    "beautifulsoup4>=4.15",
    "pandas>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "types-requests>=2.33.0.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use mocks)",
    "slow: Slow running tests",
    "network: Tests requiring network access (skip by default)",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
# verification/ holds ad-hoc multi-provider test scripts, not shipped source.
exclude = ["verification/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.ruff]
line-length = 88
target-version = "py311"
extend-include = ["*.ipynb"]
extend-exclude = [
    "data/",
    "outputs/",
    "scratch",
    ".claude",
    "backup",
    "deprecated",
    "exploratory",
    "explorative",
    "extras",
    "verification",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
docstring-code-format = false

[tool.deptry]
# Treat the dev extra as development dependencies (pytest is not imported in the
# shipped source tree).
pep621_dev_dependency_groups = ["dev"]
# tests/ carries analysis-only imports that are intentionally undeclared.
extend_exclude = ["tests"]

[tool.deptry.package_module_name_map]
# beautifulsoup4's import name is bs4; declaring it keeps scans accurate even
# when deptry runs outside the project venv.
beautifulsoup4 = ["bs4"]
